# sushi-restaurant-management

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  app.py  app_factory.py  config.py  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  seed.py  wsgi.py
app/: __init__.py  app_factory.py  config.py
app.egg-info/: SOURCES.txt
app/application/: customer_service.py  menu_service.py  order_detail_service.py  order_service.py  sushi_item_service.py
app/core/: __init__.py  config.py  error_handler.py  extensions.py  logging.py  responses.py
app/domain/: customer.py  entities.py  order.py  order_detail.py  sushi_item.py
app/infrastructure/: __init__.py  models.py
app/models/: sushi_item.py
app/modules/: __init__.py
app/presentation/: __init__.py  customer_route.py  menu_routes.py  order_detail_route.py  order_route.py  sushi_item_route.py
app/static/: swagger.json
docs/: SRS.md  api.md  architecture.md  diagrams.md  erd.puml  usecase.puml
migrations/versions/: 6a65d17f3124_init.py  b3c7cf2d134f_initial.py
src/: app.py
src/controllers/: menu_controller.py  order_controller.py  table_controller.py
tests/: conftest.py  customer_test.py  order_detail_test_py  order_test.py  sushi_item_test.py  test_app.py  test_customer.py  test_menu.py  test_order.py  test_order_detail.py  test_sushi_item.py
tests/customer/: test_customer_create.py  test_customer_delete.py  test_customer_get.py  test_customer_update.py
tests/order/: test_order_create.py  test_order_delete.py  test_order_get.py  test_order_patch.py  test_order_patch_force.py  (+1 more)
(+76 files in other folders)
