[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sushi-restaurant-management-api"
version = "0.1.0"
description = "A Sushi Restaurant Management API built with Flask"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Trần Cát Đằng", email = "catdangtran1@gmail.com" }
]
requires-python = ">=3.11"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=app --cov-report=term-missing"
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
show_missing = true
skip_covered = true
